# foveated-rendering

./: .gitignore  README.md
hardware/: GazePointDevice.h
hardware/Mouse/: GazePointDevice.cpp
renderer/: CMakeLists.txt  README.md
renderer/data/maps/: characters.map  spheres.map  test.map  tunnels.map
renderer/data/models/: columns.dae  cube.dae  spheres.dae  trial.dae  tunnels.dae
renderer/data/shaders/VK/: background.frag  background.vert  billboard.frag  billboard.vert  camera.frag  camera.vert  fbo.vert  fbo_foveated.frag  node.frag  node.vert  shadowpass.frag  shadowpass.vert  sprite.frag  sprite.vert  static_entity.frag  static_entity.vert  text.frag
renderer/data/shaders/VK/src/: background.frag  background.vert  billboard.frag  billboard.vert  camera.frag  camera.vert  fbo.frag  fbo.vert  fbo_foveated.frag  node.frag  node.vert  shadowpass.frag  shadowpass.vert  sprite.frag  sprite.vert  static_entity.frag  static_entity.vert  text.frag
renderer/src/: main.cpp
renderer/src/UI/: OptionWindowComponent.cpp  OptionWindowComponent.h  WindowComponent.cpp  WindowComponent.h
renderer/src/World/: Player.cpp  Player.h
